examples/Passing/Loops/simple_for.c
int main() {
    int a = 5;
    for (int i = 0; i < 5; ++i) {
        a += i;
    } 
    return a;
}
