examples/Failing/Loops/fail_for_scope_2.c
int main() {
    for (int i = 0; i < 5; ++i) {
        int a = 5;
        ++a;
    }
    return a;
}
